--- a/index.html
+++ b/index.html
@@ -422,7 +422,28 @@
               </div>
             </article>
 
-            <!-- New Card 4: Retro Music Player Website -->
+            <!-- Card 4 -->
+            <article class="group relative snap-start min-w-[85%] sm:min-w-[60%] md:min-w-[48%] lg:min-w-[32%] overflow-hidden rounded-xl border border-white/10 bg-white/5 ring-1 ring-white/10 hover:ring-white/20 transition transform hover:-translate-y-1" data-animate="in" style="animation-delay:.26s">
+              <div class="aspect-[16/9] overflow-hidden">
+                <img src="Assets/Images/BenPF_Homepage_IMG.png" alt="2D pixelated fighting game" class="h-full w-full object-cover transition duration-500 group-hover:scale-105" />
+              </div>
+              <div class="p-5">
+                <div class="flex items-center justify-between">
+                  <h3 class="text-lg font-semibold tracking-tight text-[#cdd6f4]">Portfolio</h3>
+                  <span class="rounded-md border border-white/10 bg-white/5 px-2 py-0.5 text-[11px] text-zinc-300">Web Dev</span>
+                </div>
+                <p class="mt-2 line-clamp-2 text-sm text-[#a6adc8]">Created portfolios/Websites for others with fully functional features and deploymnet ready product./p>
+                <div class="mt-3 flex items-center justify-between">
+                  <div class="flex items-center gap-3 text-xs text-zinc-400">
+                    <span class="inline-flex items-center gap-1"><i data-lucide="star" class="h-3.5 w-3.5"></i> —</span>
+                    <span class="inline-flex items-center gap-1"><i data-lucide="git-branch" class="h-3.5 w-3.5"></i> —</span>
+                  </div>
+                  <a href="https://christin000.github.io/Ben_Portfolio/" class="inline-flex items-center gap-1 text-sm text-indigo-300 hover:text-indigo-200 transition">More <i data-lucide="arrow-up-right" class="h-4 w-4"></i></a>
+                </div>
+              </div>
+            </article>
+
+            <!-- New Card 5: Retro Music Player Website -->
             <article class="group relative snap-start min-w-[85%] sm:min-w-[60%] md:min-w-[48%] lg:min-w-[32%] overflow-hidden rounded-xl border border-white/10 bg-white/5 ring-1 ring-white/10 hover:ring-white/20 transition transform hover:-translate-y-1" data-animate="in" style="animation-delay:.34s">
               <div class="aspect-[16/9] overflow-hidden">
                 <img src = "Assets/Images/Jukebox_img.jpg" alt="Retro music player website with cassette and vinyl aesthetic" class="h-full w-full object-cover transition duration-500 group-hover:scale-105" />
@@ -445,7 +466,7 @@
               </div>
             </article>
 
-            <!-- New Card 5: Marine Wildlife Educational Website -->
+            <!-- New Card 6: Marine Wildlife Educational Website -->
             <article class="group relative snap-start min-w-[85%] sm:min-w-[60%] md:min-w-[48%] lg:min-w-[32%] overflow-hidden rounded-xl border border-white/10 bg-white/5 ring-1 ring-white/10 hover:ring-white/20 transition transform hover:-translate-y-1" data-animate="in" style="animation-delay:.42s">
               <div class="aspect-[16/9] overflow-hidden">
                 <img src ="Assets/Images/Marinelife_Website_img.png" alt="Marine wildlife educational website with ocean scene" class="h-full w-full object-cover transition duration-500 group-hover:scale-105" />
@@ -1189,4 +1210,3 @@
 </script>
 </body>
 </html>
-
